<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pre_schedule"
        android:title="课程表消息提醒"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pre_library"
        android:title="图书馆消息提醒"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pre_card"
        android:title="学生卡消息提醒"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pre_score"
        android:title="成绩提醒"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pre_all"
        android:title="全部提醒"/>

</PreferenceScreen>