<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_refresh"
          android:orderInCategory="33"
          android:title="@string/action_refresh"
          app:showAsAction="never"/>

    <item android:id="@+id/action_share_wechat"
          android:orderInCategory="34"
          android:title="@string/action_share_wechat"
          app:showAsAction="never"/>

    <item android:id="@+id/action_share_qq"
          android:orderInCategory="35"
          android:title="@string/action_share_qq"
          app:showAsAction="never"/>

    <item android:id="@+id/action_share_weibo"
          android:orderInCategory="36"
          android:title="@string/action_share_weibo"
          app:showAsAction="never"/>

    <item android:id="@+id/action_copy_url"
          android:orderInCategory="37"
          android:title="@string/action_copy_url"
          app:showAsAction="never"/>

    <item android:id="@+id/action_open_browser"
          android:orderInCategory="38"
          android:title="@string/action_open_browser"
          app:showAsAction="never"/>

</menu>