<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:paddingLeft="52dp"
    android:paddingRight="52dp"
    >

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="分享至"
        android:textColor="?android:attr/textColorPrimary"
        />


    <Button
        android:id="@+id/btn_share_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_share"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:drawableTop="@drawable/ic_share_toqq"
        android:paddingTop="2dp"
        android:text="@string/share_to_qq"
        android:textColor="@color/explanation_color"
        android:textSize="@dimen/small_size"
        />

    <Button
        android:id="@+id/btn_share_wx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_share_qq"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:drawableTop="@drawable/ic_share_towx"
        android:paddingTop="2dp"
        android:text="@string/share_to_wx"
        android:textColor="@color/explanation_color"
        android:textSize="@dimen/small_size"
        />

    <Button
        android:id="@+id/btn_share_weibo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btn_share_qq"
        android:background="@null"
        android:drawableTop="@drawable/ic_share_toweibo"
        android:paddingTop="2dp"
        android:text="@string/share_to_weibo"
        android:textColor="@color/explanation_color"
        android:textSize="@dimen/small_size"
        />

    <Button
        android:id="@+id/btn_share_qzone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_share_qq"
        android:layout_below="@id/btn_share_qq"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:drawableTop="@drawable/ic_share_toqzone"
        android:paddingTop="2dp"
        android:text="@string/share_to_qzone"
        android:textColor="@color/explanation_color"
        android:textSize="@dimen/small_size"
        />

    <Button
        android:id="@+id/btn_share_moments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_share_wx"
        android:layout_below="@id/btn_share_wx"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:drawableTop="@drawable/ic_share_tomoments"
        android:paddingTop="2dp"
        android:text="@string/share_to_moments"
        android:textColor="@color/explanation_color"
        android:textSize="@dimen/small_size"
        />

    <Button
        android:id="@+id/btn_copy_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_share_weibo"
        android:layout_below="@id/btn_share_weibo"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:drawableTop="@drawable/ic_share_copy_link"
        android:paddingTop="2dp"
        android:text="@string/copy_download_url"
        android:textColor="@color/explanation_color"
        android:textSize="@dimen/small_size"
        />


</RelativeLayout>