<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card"
                android:orientation="vertical">

    <Button
        android:id="@+id/btn_id_logout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:text="@string/id_log_out"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/medium_size"
        />

    <Button
        android:id="@+id/btn_library_logout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/btn_id_logout"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:text="@string/library_log_out"
        android:textColor="?android:attr/textColorPrimary"
        />

    <Button
        android:id="@+id/btn_all_logout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/btn_library_logout"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:text="@string/all_log_out"
        android:textColor="@color/red"
        android:textSize="@dimen/medium_size"
        />


</RelativeLayout>