<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/item_score_vertical_margin">

    <TextView
        android:id="@+id/tv_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_size"
        tools:text="马克思主义原理"
        tools:textSize="28sp"/>

    <TextView
        android:id="@+id/title_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:text="@string/title_score"
        android:textSize="@dimen/small_size"/>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:textSize="36sp"
        android:textColor="@color/colorScore"
        tools:text="88"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/title_score"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:layout_toRightOf="@+id/tv_score"
        android:text="分"/>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:text="@string/title_category"/>

    <TextView
        android:id="@+id/tv_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:layout_alignParentRight="true"
        android:text="@string/title_credit"/>

</RelativeLayout>